# postlab

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: build.yml
binaries/aarch64-apple-darwin/: postlab  postlab-server
cli/: Cargo.toml
cli/src/: main.rs
cli/src/core/: mod.rs  models.rs  platform.rs
cli/src/core/deploy/: detector.rs  git.rs  mod.rs  runner.rs
cli/src/core/docker/: cli.rs  mod.rs
cli/src/core/firewall/: mod.rs  ufw.rs
cli/src/core/gateway/: caddy.rs  mod.rs
cli/src/core/ghost/: mod.rs
cli/src/core/nats/: mod.rs
cli/src/core/portcheck/: mod.rs
cli/src/core/processes/: mod.rs  sysinfo_impl.rs
cli/src/core/security/: checks.rs  fail2ban.rs  mod.rs
cli/src/core/services/: mod.rs
cli/src/core/ssh/: mod.rs
cli/src/core/system/: mod.rs  sysinfo_impl.rs
cli/src/core/tunnel/: cloudflare.rs  mod.rs
cli/src/core/users/: mod.rs
cli/src/core/wasm_cloud/: cli.rs  mod.rs
cli/src/db/: audit.rs  deployments.rs  mod.rs
cli/src/tui/: app.rs  events.rs  mod.rs
cli/src/tui/screens/: dashboard.rs  deployments.rs  docker.rs  firewall.rs  gateway.rs  ghost.rs  maintenance.rs  mod.rs  packages.rs  portcheck.rs  processes.rs  resources.rs  security.rs  services.rs  ssh.rs  tunnel.rs  users.rs  wasmcloud.rs
crates/postlab-cli/: Cargo.toml
crates/postlab-cli/src/: api.rs  main.rs  wizard.rs
crates/postlab-cli/src/commands/: harden.rs  install.rs  mod.rs  server.rs  status.rs  task.rs  upgrade.rs
crates/postlab-core/: Cargo.toml
crates/postlab-core/src/: db.rs  lib.rs  models.rs  os_detect.rs  ssh.rs  task_engine.rs
crates/postlab-core/src/modules/: docker.rs  firewall.rs  mod.rs  packages.rs  security.rs  services.rs  system.rs
crates/postlab-server/: Cargo.toml
crates/postlab-server/src/: main.rs  state.rs
crates/postlab-server/src/routes/: audit.rs  config.rs  install.rs  mod.rs  servers.rs  tasks.rs
docker/: docker-compose.yml
docker/fedora/: Dockerfile  entrypoint.sh
docker/fedora-dev/: Dockerfile
docker/ubuntu/: Dockerfile  entrypoint.sh
migrations/: 001_initial.sql  002_local_schema.sql
web/: README.md  package-lock.json  package.json  vite.config.ts
web/src/lib/api/: client.ts  mutations.ts  queries.ts
web/src/lib/components/: ServerCard.svelte  TaskRow.svelte
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/servers/: +page.svelte
web/src/routes/servers/[id]/: +page.svelte
web/src/routes/tasks/: +page.svelte
web/tests/: Dashboard.test.ts  api.test.ts
