[workspace]
resolver = "2"
members = [
    "cli",
]

[workspace.dependencies]
tokio              = { version = "1", features = ["full"] }
anyhow             = "1"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
sqlx               = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
uuid               = { version = "1", features = ["v4"] }
chrono             = { version = "0.4", features = ["serde"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum               = { version = "0.7", features = ["macros"] }
tower              = "0.4"
tower-http         = { version = "0.5", features = ["cors", "trace"] }
clap               = { version = "4", features = ["derive"] }
dialoguer          = "0.11"
indicatif          = "0.17"
console            = "0.15"
thiserror          = "1"
reqwest            = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rust-embed         = { version = "8", features = ["compression"] }
