[package]
name = "postlab"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
async-trait = "0.1"
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# System info
sysinfo = "0.30"

# Utilities
unicode-width = "0.2"
whoami = "1.5"
nix = { version = "0.29", features = ["user"] }
itertools = "0.12"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
