[package]
name    = "postlab-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio              = { workspace = true }
anyhow             = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
sqlx               = { workspace = true }
russh              = { workspace = true }
russh-keys         = { workspace = true }
uuid               = { workspace = true }
chrono             = { workspace = true }
tracing            = { workspace = true }
thiserror          = { workspace = true }
async-trait        = "0.1"
