[package]
name    = "postlab-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "postlab-server"
path = "src/main.rs"

[dependencies]
postlab-core = { path = "../postlab-core" }
tokio        = { workspace = true }
anyhow       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
sqlx         = { workspace = true }
axum         = { workspace = true }
tower        = { workspace = true }
tower-http   = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
